samples/_failures_safe/1761399657_2ebb8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52a042c1.c: In function ‘main’:
./samples/SAFE/__tmp_52a042c1.c:145:9: error: expected expression at end of input
  145 |         input_buffer[len -
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_52a042c1.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52a042c1.c:145:9: error: expected declaration or statement at end of input
